krator/tests/ui/state/require_transition_to.stderr
error[E0277]: the trait bound `TestState: TransitionTo<_>` is not satisfied
  --> $DIR/require_transition_to.rs:38:9
   |
LL |         Transition::next(self, TestState)
   |         ^^^^^^^^^^^^^^^^ the trait `TransitionTo<_>` is not implemented for `TestState`
   |
note: required by `Transition::<S>::next`
  --> $SRC_DIR/src/state.rs:43:5
   |
LL | /     pub fn next<I: State<S>, O: State<S>>(_i: Box<I>, o: O) -> Transition<S>
LL | |     where
LL | |         I: TransitionTo<O>,
   | |___________________________^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
